# tc-knowledge-repo

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: tckr-backend-web-AutoDeployTrigger-a9eac3fa-d7a3-460b-a070-79539e27e333.yml
config/: __init__.py  celery.py  settings.py  urls.py
docs/: CDM.dbml  PRD.md  SCENARIOS.md
docs/bruno/: bruno.json
docs/bruno/Authentication/: Get Profile.bru  Google Auth.bru  Login.bru  Register.bru
docs/bruno/Reports/: Create Report.bru  List Reports (Admin).bru  Resolve Report (Admin).bru
docs/bruno/Requests/: Create Request.bru  Delete Request.bru  Fulfill Request.bru  Get Request.bru  List Requests.bru
docs/bruno/Resources/: Create Bulk Download.bru  Create Resource.bru  Delete Resource.bru  Get Bulk Download Status.bru  Get Related Resources.bru  Get Resource.bru  List Categories.bru  List Resources.bru  List Tags.bru  Moderate Resource (Admin).bru  Presigned Upload.bru
docs/bruno/System/: Health Check.bru
docs/bruno/environments/: Local.bru  Production.bru
reports/: admin.py  api.py  models.py  schemas.py
reports/migrations/: 0001_initial.py
requests/: admin.py  api.py  models.py  schemas.py  tests.py
requests/migrations/: 0001_initial.py
resources/: admin.py  api.py  models.py  schemas.py  services.py  tasks.py
resources/management/commands/: seed_categories.py  (+1 more)
resources/migrations/: 0001_initial.py  0002_resource_file_hash_resource_minhash_signature_and_more.py  0003_remove_resource_resources_r_search__82e125_gin_and_more.py  0004_resource_search_vector_and_more.py
users/: admin.py  api.py  auth.py  models.py  schemas.py
users/migrations/: 0001_initial.py  0002_user_banned_until_user_strike_count.py
