[project]
name = "tc-knowledge-repo"
version = "0.1.0"
description = "Backend API for the TC Knowledge Repo — a college department knowledge-sharing platform."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1,<6.0",
    "django-ninja>=1.3,<2.0",
    "celery[redis]>=5.4,<6.0",
    "boto3>=1.35,<2.0",
    "psycopg[binary]>=3.2,<4.0",
    "gunicorn>=23.0,<24.0",
    "django-cors-headers>=4.6,<5.0",
    "python-dotenv>=1.1,<2.0",
    "whitenoise>=6.8,<7.0",
    "urllib3>=2.6.3",
    "pyjwt>=2.8,<3.0",
    "google-auth>=2.25,<3.0",
    "pydantic[email]>=2.0,<3.0",
    "requests>=2.31,<3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
]

[project.optional-dependencies]
dev = [
    "django-extensions>=3.2,<4.0",
    "ipython>=8.0",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
